<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stellarworker.learninghelper.ui.home.MainFragment"
        android:label="@string/bottom_navigation_home"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.stellarworker.learninghelper.ui.classes.ClassesFragment"
        android:label="@string/bottom_navigation_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.stellarworker.learninghelper.ui.list.ListFragment"
        android:label="@string/bottom_navigation_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.stellarworker.learninghelper.ui.favorites.FavoritesFragment"
        android:label="@string/bottom_navigation_favorites"
        tools:layout="@layout/fragment_favorites" />

</navigation>